gazebo is ok, ready for controller

--- a/src/balance_description/config/balance_forward_position_publisher.yaml
+++ b/src/balance_description/config/balance_forward_position_publisher.yaml
@@ -6,6 +6,7 @@ publisher_forward_position_controller:
 
     goal_names: ["pos1", "pos2", "pos3", "pos4"]
     pos1: [-0.38, -1.28, 0.0, -0.83,-0.68, 0.0]
+    # pos1: [-3.5, -3.5, 0.0, -3.83,-3.68, 0.0]
     pos2: [0.0, 0.0,0.0, 0.0,0.0, 0.0]
     pos3: [1.11, 0.46,0.0, 0.67,1.06, 0.0]
     pos4: [0.0, 0.0,0.0, 0.0,0.0, 0.0]
