--- a/src/balance_description/config/controller.yaml
+++ b/src/balance_description/config/controller.yaml
@@ -1,21 +1,51 @@
 controller_manager:
   ros__parameters:
-    update_rate: 10  # Hz
-    # use_sim_time: true
+    update_rate: 100  # Hz
+    use_sim_time: true
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
+      use_sim_time: true
 
-    forward_position_controller:
-      type: forward_command_controller/ForwardCommandController
+    # position_controller:
+    #   type: forward_command_controller/ForwardCommandController
 
-forward_position_controller:
+    effort_controller:
+      type: effort_controllers/JointGroupEffortController
+
+    velocity_controller:
+      type: velocity_controllers/JointGroupVelocityController
+
+# position_controller:
+#   ros__parameters:
+#     joints:
+#       - joint1
+#       - joint2
+#       - joint3
+#       - joint4
+#       - joint5
+#       - joint6
+#     interface_name: position
+
+effort_controller:
   ros__parameters:
     joints:
       - joint1
       - joint2
-      - joint3
       - joint4
       - joint5
+    command_interfaces:
+      - effort
+    state_interfaces:
+      - position
+      - effort
+
+velocity_controller:
+  ros__parameters:
+    joints:
+      - joint3
       - joint6
-    interface_name: position
+    command_interfaces:
+      - velocity
+    state_interfaces:
+      - velocity
